Exerciios do cap 4

--- a/Cap04/DSA-Python-Cap04.ipynb
+++ b/Cap04/DSA-Python-Cap04.ipynb
@@ -1806,7 +1806,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Qual é o seu nome?  Bob\n",
@@ -1865,7 +1865,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
