--- a/Cap04/DSA-Python-Lista1-Exercicios.ipynb
+++ b/Cap04/DSA-Python-Lista1-Exercicios.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "<!-- Trabalho Desenvolvido na Data Science Academy - www.datascienceacademy.com.br -->\n",
-    "# <font color='blue'>Data Science Academy</font>\n",
-    "# <font color='blue'>Fundamentos de Linguagem Python - Do Básico a Aplicações de IA</font>\n",
-    "# <font color='blue'>Lista 1 de Exercícios</font>"
+    "#### <font color='blue'>Data Science Academy</font>\n",
+    "#### <font color='blue'>Fundamentos de Linguagem Python - Do Básico a Aplicações de IA</font>\n",
+    "#### <font color='blue'>Lista 1 de Exercícios</font>"
    ]
   },
   {
@@ -23,12 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e05f9264-9103-4c43-9bbf-20334ead2de3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seja bem vindo Felipe!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "user_name = input('Digite seu nome:')\n",
+    "print(f'Seja bem vindo {user_name}!')"
    ]
   },
   {
@@ -43,12 +53,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "431acb5d-fcd1-4ce4-9eee-6117b4066383",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n",
+      "62\n",
+      "2639\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "number1 = 91\n",
+    "number2 = 29\n",
+    "\n",
+    "print(number1 + number2)\n",
+    "print(number1 - number2)\n",
+    "print(number1 * number2)\n",
+    "print(number1 // number2)\n"
    ]
   },
   {
@@ -68,7 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "# Escopo global voce pode acessar em qualquer parte do seu codigo, local somente dentro da função que foi criada a variável."
    ]
   },
   {
@@ -83,12 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d40d066e-42b3-4659-a098-4bb73a3448a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300.25\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "saldo = 500.50\n",
+    "saque = 200.25\n",
+    "print(saldo - saque)"
    ]
   },
   {
@@ -103,12 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "40007f31-7641-4d98-9521-c23f0741c37f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pode dirigir\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "tem_carteira_de_motorista = True\n",
+    "if tem_carteira_de_motorista:\n",
+    "  print('Pode dirigir')"
    ]
   },
   {
@@ -128,12 +179,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "45a0699c-e6f4-4f0d-a55b-e1f2a39ba92e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "idade_ana = 25\n",
+    "idade_beto = 30\n",
+    "print(idade_ana > idade_beto)"
    ]
   },
   {
@@ -150,12 +212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1f0c0503-1346-47f1-8cb9-ddbcd87641ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Par\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "number = input('Digite um numero inteiro:')\n",
+    "if int(number) % 2 == 0:\n",
+    "  print('Par')\n",
+    "else:\n",
+    "  print('Impar')"
    ]
   },
   {
@@ -195,12 +270,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "11bdc9e8-75be-4448-932d-d876207fd1e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1024\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "print(2**10)"
    ]
   },
   {
@@ -215,12 +299,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "98f84688-9bfe-4de8-9f2b-97bf184dbd18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2027\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "ano = int('2026')\n",
+    "print(1 + ano)"
    ]
   },
   {
@@ -239,12 +333,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4e2042e8-4925-4d36-acf6-7953917f43d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python é uma linguagem poderosa\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "frase = ' Python é uma linguagem poderosa '\n",
+    "print(frase.strip())"
    ]
   },
   {
@@ -259,12 +363,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0a474b6c-499e-4d50-9cdb-cec4bbecef59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " python é uma linguagem poderosa \n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "print(frase.lower())"
    ]
   },
   {
@@ -279,12 +392,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d57316c4-a357-49e9-820f-b774fe13a310",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Python é uma linguagem incrivel \n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "print(frase.replace('poderosa', 'incrivel'))"
    ]
   },
   {
@@ -299,12 +421,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6c44e720-0118-4933-94de-772274740d5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "print(len(frase))"
    ]
   },
   {
@@ -319,12 +450,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4545e6b6-347d-41e4-9040-64785c0b158f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "print(frase[1:7])"
    ]
   },
   {
@@ -339,12 +479,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "519ccb8d-07dd-4706-b949-cd4f3db5b0ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "itens = [\"arroz\", \"feijão\", \"macarrão\", \"carne\"]"
    ]
   },
   {
@@ -359,12 +500,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "b287493d-7eaf-4ea3-adee-f04bda37c753",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['arroz', 'feijão', 'macarrão', 'carne', 'leite']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "itens.append('leite')\n",
+    "print(itens)"
    ]
   },
   {
@@ -379,12 +530,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "927b9ca7-96fb-4f47-8944-1807f50188d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feijão\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "print(itens[1])"
    ]
   },
   {
@@ -399,12 +559,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "f6dae380-9cfc-41ea-87a5-0e7b9fe83412",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['arroz', 'feijão', 'carne', 'leite']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "itens.remove('macarrão')\n",
+    "print(itens)"
    ]
   },
   {
@@ -419,12 +589,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "936f45f6-f9bc-44c2-8c7e-b8f017a569e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "numbers = [1,2,3,4,5]\n",
+    "print(len(numbers))"
    ]
   },
   {
@@ -439,12 +619,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "7ec4a95a-6566-4063-b03e-9194111d0340",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'Janeiro', 2: 'Fevereiro', 3: 'Março', 4: 'Abril'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "meses = {\n",
+    "  1: 'Janeiro',\n",
+    "  2: 'Fevereiro',\n",
+    "  3: 'Março',\n",
+    "  4: 'Abril'\n",
+    "}\n",
+    "print(meses)"
    ]
   },
   {
@@ -459,12 +654,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "3d14be0c-9888-40cb-b806-5b33123349ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'Janeiro', 2: 'Fevereiro', 3: 'Março', 4: 'Abril', 5: 'Maio'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "meses[5] = 'Maio'\n",
+    "print(meses)"
    ]
   },
   {
@@ -479,12 +684,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ddf3c436-d8cd-458f-93f2-6a575d8758a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Janeiro\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "print(meses[1])"
    ]
   },
   {
@@ -508,7 +722,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "filmes = {\n",
+    "  'titulo': 'O Poderoso Chefão',\n",
+    "  'ano': 1972,\n",
+    "  'diretor': 'Francis Ford Coppola' \n",
+    "}"
    ]
   },
   {
@@ -647,7 +866,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -661,7 +880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
