Exerciios do cap 4

--- a/Cap04/DSA-Python-Lista1-Exercicios.ipynb
+++ b/Cap04/DSA-Python-Lista1-Exercicios.ipynb
@@ -717,17 +717,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "162806ad-04aa-4870-8927-dd628a9eb526",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'titulo': 'O Poderoso Chefão', 'ano': 1972, 'diretor': 'Francis Ford Coppola'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "filmes = {\n",
     "  'titulo': 'O Poderoso Chefão',\n",
     "  'ano': 1972,\n",
     "  'diretor': 'Francis Ford Coppola' \n",
-    "}"
+    "}\n",
+    "print(filmes)"
    ]
   },
   {
@@ -742,12 +751,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "5e7e177e-c3e2-43f8-8cda-9b9fffb6729b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1973\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "print(filmes['ano'])"
    ]
   },
   {
@@ -762,12 +780,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "dc5441d5-9a10-4cb8-9e7d-ea83173e2833",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'titulo': 'O Poderoso Chefão', 'ano': 1973, 'diretor': 'Francis Ford Coppola', 'genero': 'Drama', 2026: 1973}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "filmes['genero'] = 'Drama'\n",
+    "print(filmes)"
    ]
   },
   {
@@ -782,12 +810,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "95d231e5-2604-4d1b-b326-06b136d470c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'titulo': 'O Poderoso Chefão', 'ano': 1973, 'diretor': 'Francis Ford Coppola', 'genero': 'Drama', 2026: 1973}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "filmes['ano'] = 1973\n",
+    "print(filmes)"
    ]
   },
   {
@@ -802,12 +840,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "6782e15b-7c5d-4bea-93f3-7b3f0b767d7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "lista = [1,2,2,3,4,4,5,1]\n",
+    "print(set(lista))"
    ]
   },
   {
@@ -827,12 +875,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "8e59a4ae-e5a1-4411-b5db-4efbe0e131d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "set_a = {1,2,3,4}\n",
+    "set_b = {3,4,5,6}\n",
+    "print(set_a.union(set_b))"
    ]
   },
   {
