--- a/Cap06/DSA-Python-MiniProjeto1.ipynb
+++ b/Cap06/DSA-Python-MiniProjeto1.ipynb
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e4a4d4ef-511f-46b1-8c80-b1cb63cdd0d7",
    "metadata": {},
    "outputs": [],
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e7ac1ea7-b268-4f9c-902a-cd10c8011773",
    "metadata": {},
    "outputs": [],
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d9580ec6-da2c-4029-adeb-d3155dd7626b",
    "metadata": {},
    "outputs": [],
@@ -846,10 +846,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "23391be3-2c9f-469a-b3ec-4ff51fd9fe00",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 500 entries, 0 to 499\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column          Non-Null Count  Dtype         \n",
+      "---  ------          --------------  -----         \n",
+      " 0   ID_Pedido       500 non-null    int64         \n",
+      " 1   Data_Pedido     500 non-null    datetime64[ns]\n",
+      " 2   Nome_Produto    500 non-null    object        \n",
+      " 3   Categoria       500 non-null    object        \n",
+      " 4   Preco_Unitario  500 non-null    float64       \n",
+      " 5   Quantidade      500 non-null    int64         \n",
+      " 6   ID_Cliente      500 non-null    int64         \n",
+      " 7   Cidade          500 non-null    object        \n",
+      " 8   Estado          500 non-null    object        \n",
+      " 9   Faturamento     500 non-null    float64       \n",
+      " 10  Status_Entrega  500 non-null    object        \n",
+      "dtypes: datetime64[ns](1), float64(2), int64(3), object(5)\n",
+      "memory usage: 43.1+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "# Exibe informações gerais sobre o DataFrame (tipos de dados, valores não nulos)\n",
     "df_vendas.info()"
@@ -857,10 +882,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d4ef82c0-a2fe-4fb4-b26d-190ef13d16bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID_Pedido</th>\n",
+       "      <th>Data_Pedido</th>\n",
+       "      <th>Nome_Produto</th>\n",
+       "      <th>Categoria</th>\n",
+       "      <th>Preco_Unitario</th>\n",
+       "      <th>Quantidade</th>\n",
+       "      <th>ID_Cliente</th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Estado</th>\n",
+       "      <th>Faturamento</th>\n",
+       "      <th>Status_Entrega</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>2026-01-01 04:00:00</td>\n",
+       "      <td>Headset 7.1</td>\n",
+       "      <td>Acessórios</td>\n",
+       "      <td>800.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>128</td>\n",
+       "      <td>Rio de Janeiro</td>\n",
+       "      <td>RJ</td>\n",
+       "      <td>3200.00</td>\n",
+       "      <td>Rápida</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>2026-01-01 12:00:00</td>\n",
+       "      <td>Cadeira Gamer</td>\n",
+       "      <td>Móveis</td>\n",
+       "      <td>1200.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>115</td>\n",
+       "      <td>Fortaleza</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>1200.00</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>2026-01-01 23:00:00</td>\n",
+       "      <td>Monitor Ultrawide</td>\n",
+       "      <td>Eletrônicos</td>\n",
+       "      <td>2800.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>109</td>\n",
+       "      <td>Rio de Janeiro</td>\n",
+       "      <td>RJ</td>\n",
+       "      <td>2800.00</td>\n",
+       "      <td>Rápida</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>2026-01-01 15:00:00</td>\n",
+       "      <td>Mouse Vertical</td>\n",
+       "      <td>Acessórios</td>\n",
+       "      <td>235.54</td>\n",
+       "      <td>2</td>\n",
+       "      <td>114</td>\n",
+       "      <td>Fortaleza</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>471.08</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>2026-01-01 12:00:00</td>\n",
+       "      <td>Cadeira Gamer</td>\n",
+       "      <td>Móveis</td>\n",
+       "      <td>1200.00</td>\n",
+       "      <td>7</td>\n",
+       "      <td>144</td>\n",
+       "      <td>Porto Alegre</td>\n",
+       "      <td>RS</td>\n",
+       "      <td>8400.00</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID_Pedido         Data_Pedido       Nome_Produto    Categoria  \\\n",
+       "0       1000 2026-01-01 04:00:00        Headset 7.1   Acessórios   \n",
+       "1       1001 2026-01-01 12:00:00      Cadeira Gamer       Móveis   \n",
+       "2       1002 2026-01-01 23:00:00  Monitor Ultrawide  Eletrônicos   \n",
+       "3       1003 2026-01-01 15:00:00     Mouse Vertical   Acessórios   \n",
+       "4       1004 2026-01-01 12:00:00      Cadeira Gamer       Móveis   \n",
+       "\n",
+       "   Preco_Unitario  Quantidade  ID_Cliente          Cidade Estado  Faturamento  \\\n",
+       "0          800.00           4         128  Rio de Janeiro     RJ      3200.00   \n",
+       "1         1200.00           1         115       Fortaleza     CE      1200.00   \n",
+       "2         2800.00           1         109  Rio de Janeiro     RJ      2800.00   \n",
+       "3          235.54           2         114       Fortaleza     CE       471.08   \n",
+       "4         1200.00           7         144    Porto Alegre     RS      8400.00   \n",
+       "\n",
+       "  Status_Entrega  \n",
+       "0         Rápida  \n",
+       "1         Normal  \n",
+       "2         Rápida  \n",
+       "3         Normal  \n",
+       "4         Normal  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exibe as 5 primeiras linhas novamente para ver as novas colunas\n",
     "df_vendas.head()"
