--- a/Cap06/DSA-Python-Lista2-Exercicios.ipynb
+++ b/Cap06/DSA-Python-Lista2-Exercicios.ipynb
@@ -23,12 +23,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e05f9264-9103-4c43-9bbf-20334ead2de3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Triangulo Escaleno\n",
+      "Triangulo Equilátero\n",
+      "Triangulo Isóceles\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "def triangulo(a, b, c):\n",
+    "  if a == b and b == c:\n",
+    "    print('Triangulo Equilátero')\n",
+    "  elif a == b or b == c or a == c:\n",
+    "    print('Triangulo Isóceles')\n",
+    "  else:\n",
+    "    print('Triangulo Escaleno')\n",
+    "\n",
+    "triangulo(2, 3, 4)\n",
+    "triangulo(2, 2, 2)\n",
+    "triangulo(2, 2, 4)\n"
    ]
   },
   {
@@ -46,9 +67,33 @@
    "execution_count": null,
    "id": "431acb5d-fcd1-4ce4-9eee-6117b4066383",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "18\n",
+      "27\n",
+      "36\n",
+      "45\n",
+      "54\n",
+      "63\n",
+      "72\n",
+      "81\n",
+      "90\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "def tabuada(number):\n",
+    "  for i in range(1, 11):\n",
+    "    print(i * number)\n",
+    "\n",
+    "tabuada(2)\n",
+    "tabuada(5)\n",
+    "tabuada(9)"
    ]
   },
   {
@@ -63,12 +108,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "de7f16bd-c754-456b-a726-28616af68aaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A média das notas é 7.67!\n",
+      "\n",
+      "['Bruna', 'José', 'João', 'Dani']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "def media(notas):\n",
+    "  if not notas:\n",
+    "    return 'Dicionario vazio'\n",
+    " \n",
+    "\n",
+    "  quant_notas = len(notas.values())\n",
+    "  total = sum(notas.values())\n",
+    "\n",
+    "  media_total = total / quant_notas\n",
+    "  aprovados = []\n",
+    "\n",
+    "  for name, value in notas.items():\n",
+    "    if value > media_total:\n",
+    "      aprovados.append(name)\n",
+    "\n",
+    "  print(f'A média das notas é {media_total:.2f}!\\n')\n",
+    "  print(aprovados)\n",
+    "\n",
+    "lista = {\n",
+    "  'Ana': 5.5,\n",
+    "  'Bruna': 10,\n",
+    "  'Amanda': 7,\n",
+    "  'José': 9,\n",
+    "  'João': 8,\n",
+    "  'Thiago': 6.5,\n",
+    "  'Dani': 7.7\n",
+    "}\n",
+    "\n",
+    "media(lista)"
    ]
   },
   {
@@ -83,12 +167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d40d066e-42b3-4659-a098-4bb73a3448a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "new_list = [x ** 2 for x in range(1, 11) if x % 2 == 0]\n",
+    "print(new_list)"
    ]
   },
   {
@@ -103,12 +197,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "40007f31-7641-4d98-9521-c23f0741c37f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.864197530864196\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "def cal_imc(peso, altura):\n",
+    "  if not peso or not altura:\n",
+    "    return 'Peso ou altura vazio'\n",
+    "\n",
+    "\n",
+    "  imc = peso / (altura*altura)\n",
+    "  return imc\n",
+    "\n",
+    "print(cal_imc(100, 1.80))"
    ]
   },
   {
@@ -123,12 +234,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "1f0c0503-1346-47f1-8cb9-ddbcd87641ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Amanda', 7), ('Ana', 5.5), ('Bruna', 10), ('Dani', 7.7), ('José', 9), ('João', 8), ('Thiago', 6.5)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "\n",
+    "ordered_list = sorted(lista.items(), key=lambda p: p[0])\n",
+    "\n",
+    "print(ordered_list)"
    ]
   },
   {
@@ -143,12 +266,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7366a477-10f5-46ec-ba8c-b0ab6067fed0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pares': 110, 'impar': 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "def contagem(lista_int):\n",
+    "  conta = {'pares': 0, 'impar': 0}\n",
+    "\n",
+    "  for i in lista_int:\n",
+    "    if i % 2 == 0:\n",
+    "      conta['pares'] += i\n",
+    "    else:\n",
+    "      conta['impar'] += i\n",
+    "\n",
+    "  return conta\n",
+    "\n",
+    "numbers = range(1, 21)\n",
+    "print(contagem(numbers))"
    ]
   },
   {
@@ -163,12 +307,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "11bdc9e8-75be-4448-932d-d876207fd1e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['conta1@gmail.com', 'conta4@gmail.com']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "def dominios(emails):\n",
+    "  dominio_desejado = '@gmail.com'\n",
+    "  return [email for email in emails if email.endswith(f'{dominio_desejado}')]\n",
+    "\n",
+    "email_list = [\n",
+    "  'conta1@gmail.com',\n",
+    "  'conta2@hmail.com',\n",
+    "  'conta3@cmail.com',\n",
+    "  'conta4@gmail.com',\n",
+    "]\n",
+    "\n",
+    "print(dominios(email_list))"
    ]
   },
   {
@@ -183,12 +347,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "98f84688-9bfe-4de8-9f2b-97bf184dbd18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ASDA ASJDIE KFJAK EM PYTHON\n",
+      "ASDA ASJDIE KFJAK EM PYTHON\n",
+      "ASDA ASJDIE KFJAK EM PYTHON\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solução\n"
+    "# Solução\n",
+    "frases = [\n",
+    "  'asda asjdie kfjak',\n",
+    "  'asda asjdie kfjak',\n",
+    "  'asda asjdie kfjak'\n",
+    "]\n",
+    "\n",
+    "frases_modificadas = list(map(lambda f: f.upper() + ' EM PYTHON', frases))\n",
+    "\n",
+    "for frase in frases_modificadas:\n",
+    "  print(frase)"
    ]
   },
   {
@@ -222,9 +406,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
