--- a/Cap08/DSA-Python-Lista3-Exercicios.ipynb
+++ b/Cap08/DSA-Python-Lista3-Exercicios.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8341d2d2-0282-4977-bdf7-9ec419466e79",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8cecadc0-c625-443d-ac88-2e03784dd911",
    "metadata": {},
    "outputs": [],
@@ -71,14 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3d133f46-c9d2-4059-b9aa-da86488da38d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3  7 11 15]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
-    "\n",
-    "\n",
+    "terceira = matriz[:, 2]\n",
+    "print(terceira)\n",
     "\n",
     "# Saída esperada: [ 3  7 11 15]"
    ]
@@ -95,13 +103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "d9f8cb5b-202f-4f48-b819-0a1493d12c45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6  7]\n",
+      " [10 11]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
-    "\n",
+    "print(matriz[1:3, 1:3])\n",
     "\n",
     "\n",
     "# Saída esperada:\n",
@@ -121,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "b2016785-33e9-4fc7-8760-62a827fe50f1",
    "metadata": {},
    "outputs": [],
@@ -136,12 +153,20 @@
    "execution_count": null,
    "id": "c54c1074-56b8-4fce-9098-03783b14b803",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 58  64]\n",
+      " [139 154]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
-    "\n",
-    "\n",
-    "\n",
+    "produto = np.dot(A, B)\n",
+    "print(produto)\n",
     "# Saída esperada:\n",
     "# [[ 58  64]\n",
     "#  [139 154]]"
@@ -159,13 +184,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "056ca49e-3cd2-40b8-a68b-b31cf8ee3a96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5  6  7  8]\n",
+      " [ 9 10 11 12 13 14 15 16 17]\n",
+      " [18 19 20 21 22 23 24 25 26]\n",
+      " [27 28 29 30 31 32 33 34 35]\n",
+      " [36 37 38 39 40 41 42 43 44]\n",
+      " [45 46 47 48 49 50 51 52 53]\n",
+      " [54 55 56 57 58 59 60 61 62]\n",
+      " [63 64 65 66 67 68 69 70 71]\n",
+      " [72 73 74 75 76 77 78 79 80]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Cria a matriz\n",
-    "matriz = np.arange(81).reshape(9, 9)"
+    "matriz = np.arange(81).reshape(9, 9)\n",
+    "print(matriz)"
    ]
   },
   {
@@ -173,16 +215,28 @@
    "execution_count": null,
    "id": "ffabc808-267f-4cc8-99c5-0900b85042f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  3  5  7]\n",
+      " [19 21 23 25]\n",
+      " [37 39 41 43]\n",
+      " [55 57 59 61]\n",
+      " [73 75 77 79]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
-    "\n",
-    "\n",
-    "\n",
+    "print(matriz[::2, 1::2])\n",
     "# Saída esperada:\n",
-    "# [[ 1  3]\n",
-    "#  [11 13]\n",
-    "#  [21 23]]"
+    "#[[ 1  3  5  7]\n",
+    "# [19 21 23 25]\n",
+    "# [37 39 41 43]\n",
+    "# [55 57 59 61]\n",
+    "# [73 75 77 79]]"
    ]
   },
   {
@@ -197,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "0958aefb-9df8-49ac-9f4f-603c1a7e72dd",
    "metadata": {},
    "outputs": [],
@@ -208,15 +262,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "85c55211-b149-4973-9db8-738c692031c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0]\n",
+      " [0 5 5 0]\n",
+      " [0 5 5 0]\n",
+      " [0 0 0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
-    "\n",
-    "\n",
-    "\n",
+    "matriz[1:3, 1:3] = 5\n",
+    "print(matriz)\n",
     "# Saída esperada:\n",
     "# [[0 0 0 0]\n",
     "#  [0 5 5 0]\n",
@@ -251,13 +315,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "8a7529f2-98b7-465f-8e1c-b890bdc96be0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.25\n",
+      "[0.  2.5 2.5 0. ]\n",
+      "[0.  2.5 2.5 0. ]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
-    "\n"
+    "media_por_coluna = matriz.mean(axis=0)\n",
+    "media_por_linha = matriz.mean(axis=1)\n",
+    "print(matriz.mean())\n",
+    "print(media_por_coluna)\n",
+    "print(media_por_linha)"
    ]
   },
   {
@@ -272,26 +350,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "eacc6dda-fd85-4a78-8b85-00bfb1a43ea9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Cria a matriz\n",
-    "dados = np.arange(16).reshape(4, 4)"
+    "dados = np.arange(16).reshape(4, 4)\n",
+    "print(dados)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "232ca993-1489-4672-9ee7-af32d782e533",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8 -1 -1 -1]\n",
+      " [-1 -1 -1 -1]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
-    "\n",
-    "\n",
-    "\n",
+    "maiores_8 = dados[dados > 8]\n",
+    "dados[maiores_8] = -1\n",
+    "print(dados)\n",
     "# Saída esperada:\n",
     "# [[ 0  1  2  3]\n",
     "#  [ 4  5  6  7]\n",
@@ -409,9 +510,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -423,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
