--- a/Cap08/DSA-Python-Lista3-Exercicios.ipynb
+++ b/Cap08/DSA-Python-Lista3-Exercicios.ipynb
@@ -476,24 +476,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "b184a3ef-ddcd-400c-91e8-5456569dd72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Cria a matriz\n",
-    "matriz = np.arange(25).reshape(5, 5)"
+    "matriz = np.arange(25).reshape(5, 5)\n",
+    "print(matriz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "684b4f01-3036-4acf-9e20-b67822107120",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  5 10 15 20]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
-    "\n",
+    "print(matriz[0:5, 0])\n",
     "\n",
     "\n",
     "# Saída esperada: [ 0  1  2  3  4  9 14 19 24 23 22 21 20 15 10  5]"
