Correçao e soluçao dos exercicios 3

--- a/Cap08/DSA-Python-Lista3-Exercicios.ipynb
+++ b/Cap08/DSA-Python-Lista3-Exercicios.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8341d2d2-0282-4977-bdf7-9ec419466e79",
    "metadata": {},
    "outputs": [],
@@ -304,18 +304,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4ad45955-b0e1-43e9-bec3-ef2481906d0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 20 30]\n",
+      " [40 50 60]\n",
+      " [70 80 90]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Cria a matriz\n",
-    "matriz = np.array([[10, 20, 30], [40, 50, 60], [70, 80, 90]])"
+    "matriz = np.array([[10, 20, 30], [40, 50, 60], [70, 80, 90]])\n",
+    "print(matriz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "8a7529f2-98b7-465f-8e1c-b890bdc96be0",
    "metadata": {},
    "outputs": [
@@ -323,19 +334,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.25\n",
-      "[0.  2.5 2.5 0. ]\n",
-      "[0.  2.5 2.5 0. ]\n"
+      "Média: 50.0\n",
+      "Desvio Padrão: 25.82\n",
+      "\n",
+      "Matriz Normalizada:\n",
+      "[[-1.55 -1.16 -0.77]\n",
+      " [-0.39  0.    0.39]\n",
+      " [ 0.77  1.16  1.55]]\n"
      ]
     }
    ],
    "source": [
     "# Solução\n",
-    "media_por_coluna = matriz.mean(axis=0)\n",
-    "media_por_linha = matriz.mean(axis=1)\n",
-    "print(matriz.mean())\n",
-    "print(media_por_coluna)\n",
-    "print(media_por_linha)"
+    "media = np.mean(matriz)\n",
+    "desvio_padrao = np.std(matriz)\n",
+    "\n",
+    "matriz_normalizada = (matriz - media) / desvio_padrao\n",
+    "print(\"Média:\", media)\n",
+    "print(\"Desvio Padrão:\", f\"{desvio_padrao:.2f}\")\n",
+    "print(\"\\nMatriz Normalizada:\")\n",
+    "print(np.round(matriz_normalizada, 2))"
    ]
   },
   {
@@ -350,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "eacc6dda-fd85-4a78-8b85-00bfb1a43ea9",
    "metadata": {},
    "outputs": [
@@ -373,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "232ca993-1489-4672-9ee7-af32d782e533",
    "metadata": {},
    "outputs": [
@@ -390,9 +408,9 @@
    ],
    "source": [
     "# Solução\n",
-    "maiores_8 = dados[dados > 8]\n",
-    "dados[maiores_8] = -1\n",
+    "dados[dados > 8] = -1\n",
     "print(dados)\n",
+    "\n",
     "# Saída esperada:\n",
     "# [[ 0  1  2  3]\n",
     "#  [ 4  5  6  7]\n",
@@ -414,24 +432,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c2e59fcd-f418-430b-9298-0a8bd7ec9e7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 7]\n",
+      " [2 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Cria a matriz\n",
-    "A = np.array([[4, 7], [2, 6]])"
+    "A = np.array([[4, 7], [2, 6]])\n",
+    "print(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "da69715c-eaee-4f58-947f-1a86bcde93c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 7]\n",
+      " [2 6]]\n",
+      "[[1. 1.]\n",
+      " [0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
-    "\n"
+    "A_inversa = np.linalg.inv(A)\n",
+    "identidade = A @ A_inversa\n",
+    "\n",
+    "print(A)\n",
+    "print(abs(np.round(A_inversa)))\n"
    ]
   },
   {
@@ -452,15 +495,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "69ce8080-9d78-40e9-be3b-d6ed21c44c40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.4 1.2]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
+    "A = np.array([[2, 1], [1,3]])\n",
     "\n",
+    "b = np.array([8, 7])\n",
     "\n",
-    "\n",
+    "x = np.linalg.solve(A, b)\n",
+    "print(np.round(x, 2))\n",
     "# Saída esperada: [3.4 1.2]"
    ]
   },
@@ -500,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "id": "684b4f01-3036-4acf-9e20-b67822107120",
    "metadata": {},
    "outputs": [
@@ -508,13 +562,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0  5 10 15 20]\n"
+      "[[10 20 30]\n",
+      " [40 50 60]\n",
+      " [70 80 90]]\n",
+      "[10 20 30 60 90 80 70 40]\n"
      ]
     }
    ],
    "source": [
     "# Solução\n",
-    "print(matriz[0:5, 0])\n",
+    "linha_topo = matriz[0, :]\n",
+    "linha_baixo = matriz[-1, :-1][::-1]\n",
+    "coluna_direita = matriz[1:, -1]\n",
+    "coluna_esquerda = matriz[1:-1, 0][::-1]\n",
+    "\n",
+    "borda = np.concatenate((linha_topo, coluna_direita, linha_baixo, coluna_esquerda))\n",
+    "print(matriz)\n",
+    "print(borda)\n",
     "\n",
     "\n",
     "# Saída esperada: [ 0  1  2  3  4  9 14 19 24 23 22 21 20 15 10  5]"
