Estrutura de dados

--- a/Cap09/DSA-Python-Cap09.ipynb
+++ b/Cap09/DSA-Python-Cap09.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0b3f07fb-8338-43b7-a5d4-cc09adeb545c",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9c8269e6-48c4-4c6f-835a-0abeefc008d0",
    "metadata": {},
    "outputs": [],
@@ -46,10 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9b356602-d193-401b-9a71-b5e5121c4171",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Author: Data Science Academy\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext watermark\n",
     "%watermark -a \"Data Science Academy\""
@@ -57,10 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c61f3c81-9220-403e-98a8-6969f3c22d45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pandas    : 2.3.2\n",
+      "matplotlib: 3.10.6\n",
+      "numpy     : 2.3.2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%watermark --iversions"
    ]
@@ -79,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9f956020-28a9-4001-bae2-c20db8531a9f",
    "metadata": {},
    "outputs": [],
@@ -90,20 +110,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9176b8d0-537e-41fb-8f3c-23a66f8fa79f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3ca28405-acb8-4389-ae10-8e45c69d8edb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Exemplo de Series ---\n",
+      "\n",
+      "0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "3    40\n",
+      "4    50\n",
+      "Name: Valores, dtype: int64\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Exemplo de Series ---\\n\")\n",
     "print(s)\n",
@@ -112,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "175a68a3-68c6-4159-b71c-ce55395b101d",
    "metadata": {},
    "outputs": [],
@@ -128,27 +177,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9c5b5396-e028-4798-aac8-17085acec268",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(dados)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4c07df21-b422-42ae-9211-d07d5743a48c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nome': ['Ana', 'Bruno', 'Fabiana', 'Ronaldo', 'Eliana', 'Matias'], 'Idade': [28, 34, 29, 17, None, 78], 'Cidade': ['Blumenau', 'São Paulo', 'Blumenau', 'São Paulo', 'Salvador', 'São Paulo'], 'Salário': [None, 7500, 6200, 9300, 8100, 15400]}\n"
+     ]
+    }
+   ],
    "source": [
     "print(dados)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3e674c87-a385-4080-b508-9768e8982d3b",
    "metadata": {},
    "outputs": [],
@@ -159,20 +227,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "14bbb2d0-e7c0-4245-807f-26e1ac12ff35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(df_dsa)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c7601930-926e-46a5-96c5-07604833ec87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Exemplo de DataFrame ---\n",
+      "\n",
+      "      Nome  Idade     Cidade  Salário\n",
+      "0      Ana   28.0   Blumenau      NaN\n",
+      "1    Bruno   34.0  São Paulo   7500.0\n",
+      "2  Fabiana   29.0   Blumenau   6200.0\n",
+      "3  Ronaldo   17.0  São Paulo   9300.0\n",
+      "4   Eliana    NaN   Salvador   8100.0\n",
+      "5   Matias   78.0  São Paulo  15400.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Exemplo de DataFrame ---\\n\")\n",
     "print(df_dsa)"
@@ -1259,7 +1355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1273,7 +1369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
