Manipular CSV com Pandas

--- a/Cap09/DSA-Python-Cap09.ipynb
+++ b/Cap09/DSA-Python-Cap09.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "93fa5f76-1896-4eff-a71d-943121c25e91",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a2abda32-f18c-4513-a406-707d8094fdca",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "39510217-58ef-492d-a948-ed6dab5f4880",
    "metadata": {},
    "outputs": [],
@@ -321,10 +321,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9cbb26f3-be7c-4d67-b318-dd73af5866ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Salário</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ana</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bruno</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>7500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fabiana</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>6200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ronaldo</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>9300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Eliana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Salvador</td>\n",
+       "      <td>8100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Matias</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>15400.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Nome  Idade     Cidade  Salário\n",
+       "0      Ana   28.0   Blumenau      NaN\n",
+       "1    Bruno   34.0  São Paulo   7500.0\n",
+       "2  Fabiana   29.0   Blumenau   6200.0\n",
+       "3  Ronaldo   17.0  São Paulo   9300.0\n",
+       "4   Eliana    NaN   Salvador   8100.0\n",
+       "5   Matias   78.0  São Paulo  15400.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Visualizando as primeiras linhas\n",
     "df_dsa_1.head(6)"
@@ -332,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e1b6cba4-9d62-404c-bf61-21fd96b30f12",
    "metadata": {},
    "outputs": [],
@@ -343,10 +432,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "84acda94-6004-4d7a-a8fa-909aa169747a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Salário</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Ana</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bruno</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>7500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Fabiana</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>6200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Ronaldo</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>9300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Eliana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Salvador</td>\n",
+       "      <td>8100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Matias</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>15400.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0     Nome  Idade     Cidade  Salário\n",
+       "0           0      Ana   28.0   Blumenau      NaN\n",
+       "1           1    Bruno   34.0  São Paulo   7500.0\n",
+       "2           2  Fabiana   29.0   Blumenau   6200.0\n",
+       "3           3  Ronaldo   17.0  São Paulo   9300.0\n",
+       "4           4   Eliana    NaN   Salvador   8100.0\n",
+       "5           5   Matias   78.0  São Paulo  15400.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Visualizando as primeiras linhas\n",
     "df_dsa_2.head(6)"
@@ -354,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "48b77572-986e-4323-a6e6-25599bd8756e",
    "metadata": {},
    "outputs": [],
@@ -365,10 +550,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a229187f-933a-47f3-9961-bbbd350f8b8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Salário</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ana</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bruno</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>7500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fabiana</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>6200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ronaldo</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>9300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Eliana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Salvador</td>\n",
+       "      <td>8100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Matias</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>15400.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Nome  Idade     Cidade  Salário\n",
+       "0      Ana   28.0   Blumenau      NaN\n",
+       "1    Bruno   34.0  São Paulo   7500.0\n",
+       "2  Fabiana   29.0   Blumenau   6200.0\n",
+       "3  Ronaldo   17.0  São Paulo   9300.0\n",
+       "4   Eliana    NaN   Salvador   8100.0\n",
+       "5   Matias   78.0  São Paulo  15400.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Visualizando as primeiras linhas\n",
     "df_dsa_2.head(6)"
